fix: cards gap on mobile

--- a/src/core/pageModules/pageModules.module.scss
+++ b/src/core/pageModules/pageModules.module.scss
@@ -21,14 +21,14 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(248px, 1fr));
   grid-auto-rows: 1fr;
-  grid-gap: 24px;
-  grid-row-gap: 24px;
+  grid-gap: var(--spacing-layout-xs);
+  grid-row-gap: var(--spacing-layout-xs);
 
   /* for 2 or 3 items flex is used only above xl, otherwise cards are too narrow*/
   &.flexWrapper {
     @include respond_above(xl) {
       display: flex;
-      gap: 24px;
+      gap: var(--spacing-layout-xs);
       & > div {
         width: 100%;
         min-width: 248px;
@@ -40,7 +40,7 @@
   @include respond_below(m) {
     display: flex;
     flex-direction: column;
-    gap: 24px;
+    gap: var(--spacing-layout-2-xs);
     & > div {
       width: 100%;
     }
@@ -79,7 +79,7 @@
   & .description {
     font-size: 18px;
     line-height: 28px;
-    margin-bottom: 24px;
+    margin-bottom: var(--spacing-layout-xs);
   }
 
   & .button {
@@ -90,7 +90,7 @@
 
     button {
       div {
-        min-width: 24px;
+        min-width: var(--spacing-layout-xs);
       }
     }
   }
